<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gra_title"
        android:layout_margin="8dp"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_f"
            android:layout_marginStart="8dp"/>
        <Spinner
            android:id="@+id/spList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:entries="@array/sp_list"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_d"
            android:layout_marginStart="8dp"/>
        <Spinner
            android:id="@+id/dtList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:entries="@array/dt_list"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btSet"
        android:text="@string/bt_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnOnGraClick"
        android:layout_gravity="right"
        android:layout_margin="8dp"/>
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btClear"
            android:text="@string/dt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="btnOnClear"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btDelete"
            android:text="@string/dt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="btnOnDelete"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>

