<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_title"
        android:layout_margin="8dp"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_weight"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
        <EditText
            android:id="@+id/bdWeight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType= "numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_bmi"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"/>
        <EditText
            android:id="@+id/bdBmi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_fat"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"/>
        <EditText
            android:id="@+id/bdFat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            android:layout_marginRight="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_moisture"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
        <EditText
            android:id="@+id/bdMoisture"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_muscle"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"/>
        <EditText
            android:id="@+id/bdMuscle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_bone"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"/>
        <EditText
            android:id="@+id/bdBone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            android:layout_marginRight="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_meta"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
        <EditText
            android:id="@+id/bdMeta"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd_visceral"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"/>
        <EditText
            android:id="@+id/bdVisceral"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            android:layout_marginRight="8dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btSave"
        android:text="@string/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="btnOnClick"
        android:layout_gravity="center"/>

</LinearLayout>